# Guideflow

./: .gitignore  README.md  package-lock.json  package.json
apps/extension-capture/: background.js  capture-injected.js  content-script.js  manifest.json  offscreen.js  popup.html  popup.js  recorder-window.js  recorder.html  sidepanel.html  sidepanel.js
apps/frontend-platform/: package.json
apps/frontend-platform/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend-platform/src/app/dashboard/: layout.tsx  page.tsx
apps/frontend-platform/src/components/: InstructionEditor.tsx  SessionDetails.tsx  SessionList.tsx  StatusBar.tsx  VideoPlayer.tsx  index.ts
apps/frontend-platform/src/hooks/: useSocket.ts
apps/server-orchestrator/: .env.example  .gitignore  package.json
apps/server-orchestrator/src/: index.ts
apps/server-orchestrator/src/config/: index.ts
apps/server-orchestrator/src/routes/: index.ts  recording.ts  session.ts
apps/server-orchestrator/src/services/: ChunkManager.ts  DeepgramService.ts  ProcessingPipeline.ts  PythonClient.ts  SessionManager.ts  index.ts
apps/server-orchestrator/src/socket/: index.ts
apps/server-orchestrator/src/utils/: storage.ts
apps/service-intelligence/: .env.example  .gitignore  config.py  main.py  pyproject.toml  requirements.txt
apps/service-intelligence/routes/: __init__.py  audio.py  health.py
apps/service-intelligence/services/: __init__.py  elevenlabs_service.py  gemini_service.py
